--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
 html, body {
   width: 100%;
   height: 100%;
-  background-image: url("./34.jpg");
+  background-image: url("./img/34.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   color: #ddd;
